tests/neg-custom-args/safe-init/escape1.scala
class Foo {
  val a = Foo.bar(this)   // error
  val b = "hello"
}

object Foo {
  def bar(foo: Foo) = foo.b + ", world"
}
